# Zen-profile

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  constants.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: avatar_commands.rs  mod.rs  profile_commands.rs  settings_commands.rs
src-tauri/src/models/: profile.rs
src-tauri/src/services/: app_config_service.rs  avatar_service.rs  mod.rs  profile_service.rs
src/components/: AppHeader.tsx  EmptyState.tsx  NewProfileModal.tsx  ProfileCard.tsx  ProfileGrid.tsx  SettingsPage.tsx
src/hooks/: useKeyboardShortcuts.ts
src/types/: app_config.ts  profile.ts
