[package]
name = "zen-profile"
version = "0.1.0"
description = "ZenProfile – A native companion for Zen Browser"
authors = ["you"]
edition = "2021"

[lib]
name = "zen_profile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-ini = "0.21"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
base64 = "0.22"
tokio = { version = "1", features = ["sync"] }
